Fix dialog overflow on small Android screens (#7)
* Initial plan

* Fix dialog overflow on small screens by adjusting max-height and image sizing


* Remove max-height constraint on dialog image to show more of the image


* Override max-height for dialog images to display them as large as possible


* Remove overflow-y auto to enable flexbox image shrinking instead of scrolling


---------

--- a/public/style.css
+++ b/public/style.css
@@ -170,7 +170,8 @@ main .main-content {
 }
 
 .show-dialog .show-image {
-    max-height: 70vh;
+    max-height: none;
+    flex-shrink: 1;
 }
 
 .show {
@@ -273,7 +274,7 @@ main .main-content {
     background: transparent;
     border: none;
     max-width: 90vw;
-    max-height: 90vh;
+    max-height: 95vh;
     padding: 0;
     overflow: visible;
 }
@@ -292,7 +293,10 @@ main .main-content {
 .show-dialog-content {
     position: relative;
     max-width: 600px;
+    max-height: 95vh;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .show-dialog-close {
@@ -339,4 +343,8 @@ main .main-content {
 
 .show-dialog .show {
     cursor: default;
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    overflow: hidden;
 }
